fixed cropped Slick navigation arrows

--- a/app/modules/elements/assets/sass/_slick-theme.scss
+++ b/app/modules/elements/assets/sass/_slick-theme.scss
@@ -36,3 +36,22 @@
   margin: 0;
   width: 15px;
 }
+
+
+.slick-prev, .slick-next {
+    position: absolute;
+    display: block;
+    height: 40px;
+    width: 20px;
+    line-height: 0;
+    font-size: 0;
+    cursor: pointer;
+    background: transparent;
+    color: transparent;
+    top: 50%;
+    margin-top: -10px\9;
+    transform: translate(0, -50%);
+    padding: 0;
+    border: 0;
+    outline: none;
+}
